[tool.poetry]
name = "ado-downloader"
version = "0.1.0"
description = "Azure DevOps Downloader"
authors = ["reuben olinsky"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reubeno/ado-downloader"
packages = [{include = "ado_downloader"}]

[tool.poetry.scripts]
ado-downloader = "ado_downloader.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.6"
coloredlogs = "^15.0.1"
tqdm = "^4.64.1"
requests = "^2.28.2"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
types-requests = "^2.28.11.12"
types-pyyaml = "^6.0.12"
flake8-bugbear = "^22.9.23"
types-tqdm = "^4.64.7.1"
types-colorama = "^0.4.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
files = "ado_downloader"

[[tool.mypy.overrides]]
module = "coloredlogs"
ignore_missing_imports = true