[tool.poetry]
name = "ado-downloader"
version = "0.1.0"
description = "Azure DevOps Downloader"
authors = ["reuben olinsky"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reubeno/ado-downloader"
packages = [{include = "ado_downloader"}]

[tool.poetry.scripts]
ado-download = "ado_downloader.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.6"
coloredlogs = "^15.0.1"
tqdm = "^4.65.1"
requests = "^2.31.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^5.0.4"
mypy = "^1.4"
types-requests = "^2.31.0.1"
types-pyyaml = "^6.0.12"
flake8-bugbear = "^23.3.12"
types-tqdm = "^4.65.0.1"
types-colorama = "^0.4.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
files = "ado_downloader"

[[tool.mypy.overrides]]
module = "coloredlogs"
ignore_missing_imports = true